<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adaptive Alarm</string>
    <string name="menu_settings">Settings</string>
    
    <string name="default_current_time">"Current time is : 00:00 "</string>
    <string name="default_event_prompt">"Enter Information for this Alarm Event"</string>
    
    <string name="off">Off</string>
    <string name="snooze">Snooze</string>
    <string name="preferences">Preferences</string>
    <string name="create_alarm">Create Alarm</string>
    
    <string name="alarm_1_prompt">Alarm 1</string>
    <string name="alarm_2_prompt">Alarm 2</string>
    <string name="alarm_3_prompt">Alarm 3</string>
    <string name="alarm_4_prompt">Alarm 4</string>
    
    <string-array name="alarm_type_array">
        <item>Inactive</item>
        <item>Simple alarm</item>
        <item>Catch a flight</item>
        <item>Drive to event</item>
    </string-array>
    
        <string name="alarm_1">Alarm 1</string>
        <string name="alarm_2">Alarm 2</string>
        <string name="alarm_3">Alarm 3</string>
        <string name="alarm_4">Alarm 4</string>
        <string name="null_time">--:-- --</string>
        <string name="_">"  "</string>
        <string name="default_status_string">" "</string>
        <string name="bluetooth_service">UserBluetoothService</string>
    
    
</resources>