<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSkyBlue"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_current_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/snooze_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:text="@string/snooze" />

    <Button
        android:id="@+id/off_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/snooze_button"
        android:text="@string/off" />

    <TableLayout
	    android:id="@+id/alarmTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/off_button"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_alarm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:entries="@array/alarm_type_array"
                android:prompt="@string/alarm_1_prompt"  />

            <TextView
                android:id="@+id/textView_setTime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView_null1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_" 
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_status1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_init1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_alarm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:entries="@array/alarm_type_array"
                android:prompt="@string/alarm_2_prompt"   />
            
            <TextView
                android:id="@+id/textView_setTime2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            
        <TableRow
            android:id="@+id/tableRow2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView_null2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_" 
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_status2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_init2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_alarm3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:entries="@array/alarm_type_array"
                android:prompt="@string/alarm_3_prompt"   />

            <TextView
                android:id="@+id/textView_setTime3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            
        <TableRow
            android:id="@+id/tableRow3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView_null3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_" 
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_status3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_init3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_alarm4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:entries="@array/alarm_type_array"
                android:prompt="@string/alarm_4_prompt"   />

            <TextView
                android:id="@+id/textView_setTime4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/null_time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            </TableRow>
            
        <TableRow
            android:id="@+id/tableRow4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView_null4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_" 
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_status4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textView_init4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_status_string"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
            </TableRow>
        
      </TableLayout>
      
      <Button
	    	android:id="@+id/btnPreferences"
	    	android:text="@string/preferences"
	 	 	android:layout_width="match_parent" 
	  		android:layout_below="@+id/alarmTableLayout"
			android:layout_height="wrap_content" />
    
</RelativeLayout>