<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightSkyBlue"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/default_event_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TableLayout
	        android:id="@+id/flightTableLayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	  		android:layout_below="@+id/textView1"
	        android:layout_alignParentLeft="true" >

	        <TableRow
	            android:id="@+id/TableRow1"
    	        android:layout_width="wrap_content"
        	    android:layout_height="wrap_content" >

            	<TextView
                	android:id="@+id/flightNumberPrompt"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="Flight Number:"
                	android:textAppearance="?android:attr/textAppearanceMedium" />
	            		    
				<EditText
				    android:id="@+id/flightNumber"  
				    android:layout_width="100dip" 
					android:text="AAL174"
	   				android:layout_height="wrap_content" />
       
			</TableRow>
			
	        <TableRow
	            android:id="@+id/TableRow2"
    	        android:layout_width="wrap_content"
        	    android:layout_height="wrap_content" >

            	<TextView
                	android:id="@+id/flightDatePrompt"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="Flight Date:"
                	android:textAppearance="?android:attr/textAppearanceMedium" />
	            		    
				<EditText
				    android:id="@+id/flightDate"  
				    android:layout_width="100dip" 
	   				android:layout_height="wrap_content" />
       
			</TableRow>
			
	  </TableLayout>

      <Button
	    	android:id="@+id/btnCreateAlarm"
	    	android:text="@string/create_alarm"
	 	 	android:layout_width="match_parent" 
	  		android:layout_below="@+id/flightTableLayout"
			android:layout_height="wrap_content" />
	    
      <Button
	    	android:id="@+id/btnPreferences"
	    	android:text="@string/preferences"
	 	 	android:layout_width="match_parent" 
	  		android:layout_below="@+id/btnCreateAlarm"
			android:layout_height="wrap_content" />
    
</RelativeLayout>